; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/remote/extr_300.c_sh.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/remote/extr_300.c_sh.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CMD = common dso_local global i8* null, align 8
@FD_SETSIZE = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8
@EWOULDBLOCK = common dso_local global i64 0, align 8
@EAGAIN = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sh(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca [1024 x i8], align 16
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = load i8*, i8** @CMD, align 8
  %8 = load i8*, i8** @CMD, align 8
  %9 = call i32 @strlen(i8* %8)
  %10 = call i32 @write(i32 %6, i8* %7, i32 %9)
  br label %11

11:                                               ; preds = %1, %34, %58, %65
  %12 = call i32 @FD_ZERO(i32* %5)
  %13 = call i32 @FD_SET(i32 0, i32* %5)
  %14 = load i32, i32* %2, align 4
  %15 = call i32 @FD_SET(i32 %14, i32* %5)
  %16 = load i32, i32* @FD_SETSIZE, align 4
  %17 = call i64 @select(i32 %16, i32* %5, i32* null, i32* null, i32* null)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %65

19:                                               ; preds = %11
  %20 = call i64 @FD_ISSET(i32 0, i32* %5)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %41

22:                                               ; preds = %19
  %23 = getelementptr inbounds [1024 x i8], [1024 x i8]* %4, i64 0, i64 0
  %24 = call i32 @read(i32 0, i8* %23, i32 1024)
  store i32 %24, i32* %3, align 4
  %25 = icmp slt i32 %24, 1
  br i1 %25, label %26, label %36

26:                                               ; preds = %22
  %27 = load i64, i64* @errno, align 8
  %28 = load i64, i64* @EWOULDBLOCK, align 8
  %29 = icmp eq i64 %27, %28
  br i1 %29, label %34, label %30

30:                                               ; preds = %26
  %31 = load i64, i64* @errno, align 8
  %32 = load i64, i64* @EAGAIN, align 8
  %33 = icmp eq i64 %31, %32
  br i1 %33, label %34, label %35

34:                                               ; preds = %30, %26
  br label %11

35:                                               ; preds = %30
  br label %66

36:                                               ; preds = %22
  %37 = load i32, i32* %2, align 4
  %38 = getelementptr inbounds [1024 x i8], [1024 x i8]* %4, i64 0, i64 0
  %39 = load i32, i32* %3, align 4
  %40 = call i32 @write(i32 %37, i8* %38, i32 %39)
  br label %41

41:                                               ; preds = %36, %19
  %42 = load i32, i32* %2, align 4
  %43 = call i64 @FD_ISSET(i32 %42, i32* %5)
  %44 = icmp ne i64 %43, 0
  br i1 %44, label %45, label %64

45:                                               ; preds = %41
  %46 = load i32, i32* %2, align 4
  %47 = getelementptr inbounds [1024 x i8], [1024 x i8]* %4, i64 0, i64 0
  %48 = call i32 @read(i32 %46, i8* %47, i32 1024)
  store i32 %48, i32* %3, align 4
  %49 = icmp slt i32 %48, 1
  br i1 %49, label %50, label %60

50:                                               ; preds = %45
  %51 = load i64, i64* @errno, align 8
  %52 = load i64, i64* @EWOULDBLOCK, align 8
  %53 = icmp eq i64 %51, %52
  br i1 %53, label %58, label %54

54:                                               ; preds = %50
  %55 = load i64, i64* @errno, align 8
  %56 = load i64, i64* @EAGAIN, align 8
  %57 = icmp eq i64 %55, %56
  br i1 %57, label %58, label %59

58:                                               ; preds = %54, %50
  br label %11

59:                                               ; preds = %54
  br label %66

60:                                               ; preds = %45
  %61 = getelementptr inbounds [1024 x i8], [1024 x i8]* %4, i64 0, i64 0
  %62 = load i32, i32* %3, align 4
  %63 = call i32 @write(i32 1, i8* %61, i32 %62)
  br label %64

64:                                               ; preds = %60, %41
  br label %65

65:                                               ; preds = %64, %11
  br label %11

66:                                               ; preds = %59, %35
  %67 = call i32 @exit(i32 0) #3
  unreachable
}

declare dso_local i32 @write(i32, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @FD_ZERO(i32*) #1

declare dso_local i32 @FD_SET(i32, i32*) #1

declare dso_local i64 @select(i32, i32*, i32*, i32*, i32*) #1

declare dso_local i64 @FD_ISSET(i32, i32*) #1

declare dso_local i32 @read(i32, i8*, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
